# JadeVoice

./: .gitignore  Cargo.toml  README.MD
.cargo/: config.toml
src/: commands.rs  events.rs  main.rs  services.rs
src/commands/: music.rs
src/services/: music.rs
voicevox_api/: Cargo.toml  build.rs
voicevox_api/src/: api.rs  lib.rs  voicevox_core.rs
