[package]
name = "JadeMusic"
version = "0.1.0"
edition = "2024"
[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",  # TLS backend（native_tlsより軽量）
    "model",
    "voice",           # Songbird連携に必要
] }
poise = "0.6.1"
dotenv = "0.15.0"
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "davey", features = ["receive", "builtin-queue"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "ogg", "vorbis", "flac", "wav", "mkv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.0"

[profile.release]
opt-level = 3         # 最高レベルの速度最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用

# [profile.release]
# opt-level = 1
# lto = false
# codegen-units = 16
# panic = "abort"
