[package]
name = "JadeMusic"
version = "0.1.0"
edition = "2024"
[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
] }
poise = "0.6.1"
dotenv = "0.15.0"
songbird = { git = "https://github.com/beerpsi-forks/songbird", branch = "current", features = ["receive", "builtin-queue"] }
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "ogg", "vorbis", "flac", "wav", "mkv"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.0"
voicevox_api = { path="voicevox_api" }
dashmap = "6.1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

# [profile.release]
# opt-level = 1
# lto = false
# codegen-units = 16
# panic = "abort"
